feat:g1 gc options